--- a/page.html
+++ b/page.html
@@ -15,8 +15,8 @@
 		<li>
 		<i class="fa-solid fa-house-user"></i>
 		</li>
-		<li id="#nosotros">NOSOTROS</li>
-		<li id="#productos">PRODUCTOS </li>
+		<li id="#nosotros"><a href="#nosotros" >NOSOTROS</a></li>
+		<li id="#productos"><a href="#productos" >PRODUCTOS</a></li>
 		<span>USUARIO:RANGER</span>
 		<li class="regreso"><i class="fa-solid fa-circle-info"></i></li>
 	</ul>
